More Responsive page

--- a/eventapi/html/allevents/aboutus.html
+++ b/eventapi/html/allevents/aboutus.html
@@ -46,7 +46,7 @@
                         and explain in a better way how gravitational waves, and other electromagnetic events works, and how are they detected and to teach everyone this is something every human being could learn, from children to grown-up-people. Also,
                         this could be used in science reaserch or in Education field. It's like having NASA in your backyard!</p>
                 </div>
-            </div><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
+            </div><img class="img-fluid" src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
     </main>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://www.youtube.com/watch?v=21X5lGlDOfg" target="_blank"><i class="icon ion-social-youtube"></i></a></div>
     <footer
