--- a/eventapi/html/allevents/downloadapp.html
+++ b/eventapi/html/allevents/downloadapp.html
@@ -45,7 +45,11 @@
                     <h2>coming soon download app</h2>
                 </div>
             </div>
-            <div class="container text-center"><img src="assets/img/900px-Crab_Nebula.jpg"></div>
+            <div class="container text-center"><a class="btn btn-primary" role="button" href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">Android Ligo Aplication By Laser Labs</a></div>
+            <div class="container">
+                <p></p>
+            </div>
+            <div class="container text-center"><img class="img-fluid" src="assets/img/900px-Crab_Nebula.jpg"></div>
         </section>
     </main>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://www.youtube.com/watch?v=21X5lGlDOfg" target="_blank"><i class="icon ion-social-youtube"></i></a></div>
