--- a/eventapi/html/allevents/games.html
+++ b/eventapi/html/allevents/games.html
@@ -46,23 +46,27 @@
                 </div>
             </div>
             <div class="container text-center"><button class="btn btn-primary" type="button" style="font-size: 32px;">Play Now</button></div>
-            <p class="text-left" style="height: 22px;font-size: 24px;"><strong>Gravity Free Games</strong></p>
+            <div class="container">
+                <p></p>
+            </div>
+            <p class="text-center" style="height: 22px;font-size: 24px;"><strong>Gravity Free Games</strong></p>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
                             <th class="text-center">
-                                <div class="container text-center"><img src="assets/img/canvas-rider.jpg" style="width: 480px;height: 316px;"></div><a class="btn btn-primary" role="button" href="http://canvasrider.com/" target="_blank"><strong>Canvas Rider</strong><br></a></th>
-                            <th class="text-center">
-                                <div class="container"><img src="assets/img/chain-reaction.jpg" style="width: 480px;height: 316px;"></div><a class="btn btn-primary" role="button" href="http://yvoschaap.com/chainrxnadvanced/" target="_blank"><strong>Chain Reaction</strong><br></a></th>
+                                <div class="container text-center"><img class="img-fluid" src="assets/img/canvas-rider.jpg" style="width: 480px;height: 316px;"></div><a class="btn btn-primary" role="button" href="http://canvasrider.com/" target="_blank"><strong>Canvas Rider</strong><br></a></th>
+                            <th
+                                class="text-center">
+                                <div class="container"><img class="img-fluid" src="assets/img/chain-reaction.jpg" style="width: 480px;height: 316px;"></div><a class="btn btn-primary" role="button" href="http://yvoschaap.com/chainrxnadvanced/" target="_blank"><strong>Chain Reaction</strong><br></a></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td class="text-center">
-                                <div class="container text-center"><img src="assets/img/angry-birds.jpg" style="height: 316px;"></div><a class="btn btn-primary" role="button" href="http://chrome.angrybirds.com/" target="_blank"><strong>Angry Birds</strong><br></a></td>
+                                <div class="container text-center"><img class="img-fluid" src="assets/img/angry-birds.jpg" style="height: 316px;"></div><a class="btn btn-primary" role="button" href="http://chrome.angrybirds.com/" target="_blank"><strong>Angry Birds</strong><br></a></td>
                             <td class="text-center">
-                                <div class="container text-center"><img src="assets/img/torus.jpg" style="width: 480px;height: 316px;"></div><a class="btn btn-primary" role="button" href="http://www.benjoffe.com/code/games/torus/" target="_blank"><strong>Torus</strong><br></a></td>
+                                <div class="container text-center"><img class="img-fluid" src="assets/img/torus.jpg" style="width: 480px;height: 316px;"></div><a class="btn btn-primary" role="button" href="http://www.benjoffe.com/code/games/torus/" target="_blank"><strong>Torus</strong><br></a></td>
                         </tr>
                         <tr></tr>
                     </tbody>
@@ -70,7 +74,7 @@
             </div>
             <div class="container">
                 <p></p>
-            </div><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
+            </div><img class="img-fluid" src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
     </main>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://www.youtube.com/watch?v=21X5lGlDOfg" target="_blank"><i class="icon ion-social-youtube"></i></a></div>
     <footer
