--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -40,13 +40,13 @@
     </nav>
     <main class="page lanidng-page">
         <section class="portfolio-block block-intro">
-            <div class="container"><img class="shadow bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
+            <div class="container"><img class="img-fluid shadow bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
                 <div class="about-me">
                     <p class="bounce animated" style="font-family: Sriracha, cursive;"><br><strong><span style="text-decoration: underline;">Project</span></strong><br><strong><span style="text-decoration: underline;">                          "GW EINSTEIN"</span></strong><br> SEARCH FOR GRAVITATIONAL WAVES<br>GAMMA
                         RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
                 </div>
             </div>
-            <p class="bounce animated" style="font-family: Sriracha, cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img class="shadow" src="assets/img/Logo.png">
+            <p class="bounce animated" style="font-family: Sriracha, cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img class="img-fluid shadow" src="assets/img/Logo.png">
             <div class="container">
                 <p></p>
             </div>
@@ -121,7 +121,7 @@
         </section>
     </main>
     <section class="portfolio-block website gradient">
-        <div class="container text-center"><img class="shadow" data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
+        <div class="container text-center"><img class="img-fluid shadow" data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
         <div></div>
     </section>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter" data-bs-hover-animate="bounce"></i></a><a href="#"><i class="icon ion-social-facebook" data-bs-hover-animate="bounce"></i></a><a href="#"><i class="icon ion-social-snapchat" data-bs-hover-animate="bounce"></i></a>
