--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <main class="page lanidng-page">
-        <section class="portfolio-block block-intro"><img src="assets/img/Logo.png"></section>
+        <section class="portfolio-block block-intro"><img class="img-fluid" src="assets/img/Logo.png"></section>
         <section class="portfolio-block skills">
             <div class="container">
                 <div class="heading">
@@ -48,7 +48,7 @@
                 <div class="row">
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><img src="assets/img/unnamed.jpg" style="width: 220px;"></div>
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/unnamed.jpg" style="width: 220px;"></div>
                             <div class="card-body">
                                 <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 25px;"><a href="https://www.ligo.caltech.edu/page/educational-resources">Educational Resources</a><br></h3>
                                 <p class="card-text">Whether you're a K-12 educator, a parent, or an interested student, you should browse our education web pages. There's something fun and educational here for everyone.<br></p>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><img src="assets/img/unnamed.jpg" style="width: 220px;"></div>
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/unnamed.jpg" style="width: 220px;"></div>
                             <div class="card-body">
                                 <p class="text-center card-text" data-bs-hover-animate="bounce" style="font-size: 22px;"><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
                             </div>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><img src="assets/img/unnamed.jpg" style="width: 220px;"></div>
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/unnamed.jpg" style="width: 220px;"></div>
                             <div class="card-body" style="font-size: 22px;">
                                 <p class="card-text" data-bs-hover-animate="bounce"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy"><strong>GRAVITY SPY</strong></a><br></p>
                             </div>
@@ -78,22 +78,22 @@
                 <div class="row">
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 220px;"></div>
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 220px;"></div>
                             <div class="card-body">
-                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 22px;"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong>LIGO ANDROID</strong></a><br></h3>
+                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 22px;"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">LIGO ANDROID</a><br></h3>
                                 <p class="card-text"><br></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 220px;"></div>
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 220px;"></div>
                             <div class="card-body d-xl-flex align-items-xl-start"><a class="card-link" href="https://www.ligo.org/sp/science/Publication-GW170817MMA/" style="font-size: 22px;"><strong>BINARY SYSTEM OF NEUTRON STARS</strong><br></a></div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><img src="assets/img/PngItem_2522307.png" style="width: 76px;"></div>
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/PngItem_2522307.png" style="width: 76px;"></div>
                             <div class="card-body">
                                 <p class="card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><a href="learngravity.html" style="font-size: 22px;"><strong>LEARN GRAVITY</strong></a><br></p>
                             </div>
@@ -106,7 +106,7 @@
                 <div class="row">
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><img src="assets/img/GWvisual.jpg" style="width: 197px;"></div>
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/GWvisual.jpg" style="width: 197px;"></div>
                             <div class="card-body">
                                 <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://spaceplace.nasa.gov/gravitational-waves/sp/" style="font-size: 22px;"><br>GRAVITATIONAL WAVES<br></a><br></h3>
                                 <p class="card-text"><br></p>
@@ -115,14 +115,14 @@
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><img src="assets/img/1366_2000.jpg" style="width: 304px;"></div>
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/1366_2000.jpg" style="width: 304px;"></div>
                             <div class="card-body">
                                 <p class="text-center card-text" data-bs-hover-animate="bounce"></p><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 22px;"><strong>SUPERNOVA</strong></a></div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><img src="assets/img/electromagnetica.jpg" style="width: 220px;"></div>
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/electromagnetica.jpg" style="width: 220px;"></div>
                             <div class="card-body">
                                 <p class="card-text" data-bs-hover-animate="bounce"><a href="https://spaceplace.nasa.gov/magic-windows/en/" style="font-size: 22px;"><strong>ELECTROMAGNETIC SPECTRUM</strong></a><br></p>
                             </div>
@@ -133,7 +133,7 @@
         </section>
     </main>
     <section class="portfolio-block website gradient">
-        <div class="container text-center"><img data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
+        <div class="container text-center"><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/bunnysuitadj1.jpg"></div>
         <div></div>
     </section>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://www.youtube.com/watch?v=21X5lGlDOfg" target="_blank"><i class="icon ion-social-youtube"></i></a></div>
