--- a/eventapi/html/allevents/learngravity.html
+++ b/eventapi/html/allevents/learngravity.html
@@ -43,7 +43,7 @@
             <div class="container text-center">
                 <p class="text-left"><br><strong>Finding a ripple in spacetime</strong><br><br>In 1916, the year after correctly formulating the theory of general relativity, Albert Einstein predicted that accelerating masses create ripples that propagate through the fabric
                     of spacetime known as gravitational waves. However, these ripples are so unbelievably minuscule that Einstein himself thought they would never be detected. A century after this prediction, the Laser Interferometer Gravitational­-wave
-                    Observatory (LIGO) has made the first direct detection of this elusive phenomenon.<br><br></p><img src="https://panoptes-uploads.zooniverse.org/production/project_attached_image/0c518832-4d50-472f-9609-a3b6f4e51f7f.png" style="width: 700px;">
+                    Observatory (LIGO) has made the first direct detection of this elusive phenomenon.<br><br></p><img class="img-fluid" src="https://panoptes-uploads.zooniverse.org/production/project_attached_image/0c518832-4d50-472f-9609-a3b6f4e51f7f.png">
                 <p
                     class="text-left"><br>Though gravitational waves are invisible, they do have a measurable effect on the space they travel through by causing distances to shrink and stretch. The LIGO detectors in Livingston, Louisiana and Hanford, Washington utilize laser
                     light as a very precise stopwatch to measure this effect. A&nbsp;<em>very</em>&nbsp;simplified diagram of the detectors is shown above. The detectors are identical Michelson interferometers, shooting powerful lasers down equal-length
@@ -53,13 +53,13 @@
                     billion light-years away. The recently-upgraded LIGO was able to detect the minuscule squishing and stretching of space from this event - "feeling" the ripple in spacetime firsthand. An image of this detection in both detectors is
                     shown below, plotted in a similar fashion as the images you will be looking at in this project. From this one discovery, we made the first detection of gravitational waves and binary black hole systems, and tested Einstein's relativity
                     to a whole new level. To learn more about this discovery, see&nbsp;<a href="https://www.youtube.com/watch?v=afugOlipGu4&amp;index=2&amp;list=PL8H5VdtDcAdZ10U73ryfmNWrfyziJ8Vfh">this video</a>&nbsp;that was made by collaborators on
-                    this project.<br><br></p><img src="https://panoptes-uploads.zooniverse.org/production/project_attached_image/1802cdce-43f3-40fc-ae0e-8780d26d2e76.png" style="width: 700px;">
+                    this project.<br><br></p><img class="img-fluid" src="https://panoptes-uploads.zooniverse.org/production/project_attached_image/1802cdce-43f3-40fc-ae0e-8780d26d2e76.png" style="width: 700px;">
                     <p class="text-left"><br>On December 26th 2015, LIGO also confirmed a second signal from a binary black hole inspiral. However, this new science has just begun and there are many more gravitational waves to discover.<strong>Glitches in the system</strong>LIGO
                         is the most sensitive and complicated gravitational experiment ever built. To detect gravitational waves even from the strongest events in the Universe, LIGO needs to be able to know when the length of its 4-kilometer arms change
                         by a distance 10,000 times smaller than the diameter of a proton! This makes LIGO susceptible to a great deal of instrumental and environmental sources of noise. Of particular concern are transient, poorly modeled artifacts known
                         by the LIGO community as&nbsp;<em>glitches</em>. Though the reason for having two detectors separated by thousands of miles is to isolate the detectors from common sources of noise, glitches happen frequently enough that they often
                         can be coincident in the two detectors and can mimic astrophysical signals. Classifying and characterizing glitches is imperative in the effort to target and eliminate these artifacts, paving the way for more astrophysical signals
-                        to be detected.<br></p><img src="https://panoptes-uploads.zooniverse.org/production/project_attached_image/f5687385-3fc9-46fb-a6b1-bc438535d4af.gif">
+                        to be detected.<br></p><img class="img-fluid" src="https://panoptes-uploads.zooniverse.org/production/project_attached_image/f5687385-3fc9-46fb-a6b1-bc438535d4af.gif">
                     <p class="text-left"><br>Classifying glitches using computers has proven to be an exceedingly difficult task. A family of data analysis algorithms known as&nbsp;<em>machine learning</em>&nbsp;have made huge strides over the past decade in classification
                         problems, though they usually require a large pre-classified dataset to operate effectively. However, human intuition has proven time and time again to be a useful tool in pattern recognition problems such as this. One of the innovations
                         of this citizen science project is that citizen scientists and computer algorithms will work in a symbiotic relationship, helping one another to optimally classify and characterize glitches. The general workflow will be:<br>1.
@@ -70,13 +70,13 @@
             </div>
             <div class="container">
                 <p></p>
-            </div><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
+            </div><img class="img-fluid" src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg"></section>
     </main>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://www.youtube.com/watch?v=21X5lGlDOfg" target="_blank"><i class="icon ion-social-youtube"></i></a></div>
     <footer
         class="page-footer">
         <div class="container" style="font-family: Sriracha, cursive;">
-            <div class="links"><a href="../aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="../contact.html">Contact with us</a>
+            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
             <div class="social-icons"></div>
         </div>
         </footer>
