--- a/eventapi/html/allevents/project.html
+++ b/eventapi/html/allevents/project.html
@@ -50,7 +50,7 @@
                 So if you are a person that knows anything about physics, you can access to this information and have the possibility of studying and understanding it. We would like students and teachers, even children to get in this app and use it as
                 an information site, which is accessible, understandable and easy-going. So we are trying to improve it and to add some images, sounds, videos, and other content that anyone can enjoy and use. We want anybody to be science's thirsty!<br><br></p>
             <p>It is a very recent topic and it has just begun its study, which makes it a great challenge. Our approach to developing this project is to orient it towards education. <br><br>The tools used for the development are html, javascript, but we
-                created this website and this app so everyone can use it without any problem or previous knowledge.</p><img src="assets/img/900px-Crab_Nebula.jpg"></section>
+                created this website and this app so everyone can use it without any problem or previous knowledge.</p><img class="img-fluid" src="assets/img/900px-Crab_Nebula.jpg"></section>
     </main>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://www.youtube.com/watch?v=21X5lGlDOfg" target="_blank"><i class="icon ion-social-youtube"></i></a></div>
     <footer
