Logo Added in Nav Bar

--- a/eventapi/html/allevents/aboutus.html
+++ b/eventapi/html/allevents/aboutus.html
@@ -23,9 +23,9 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#" style="font-family: 'Bigshot One', cursive;"><strong>GW EINSTEIN</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div
-                class="collapse navbar-collapse" id="navbarNav" style="font-family: Sriracha, cursive;">
+        <div class="container"><img src="assets/img/PngItem_2522307.png" style="width: 25px;margin: 0px;margin-right: 10px;"><a class="navbar-brand logo" href="#" style="font-family: 'Bigshot One', cursive;"><strong>GW EINSTEIN</strong></a><button data-toggle="collapse" class="navbar-toggler"
+                data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNav" style="font-family: Sriracha, cursive;">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
@@ -35,7 +35,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="aboutus.html"><strong>About us</strong><br></a></li>
                 </ul>
-        </div>
+            </div>
         </div>
     </nav>
     <main class="page cv-page">
