--- a/eventapi/html/allevents/catalogue/einstein190814.html
+++ b/eventapi/html/allevents/catalogue/einstein190814.html
@@ -23,7 +23,7 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#" style="font-family: 'Bigshot One', cursive;"><strong>GW EINSTEIN</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><img src="../assets/img/PngItem_2522307.png" style="width: 25px;margin-right: 10px;"><a class="navbar-brand logo" href="#" style="font-family: 'Bigshot One', cursive;"><strong>GW EINSTEIN</strong></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navbarNav" style="font-family: Sriracha, cursive;">
                 <ul class="nav navbar-nav ml-auto">
