--- a/eventapi/html/allevents/catalague.html
+++ b/eventapi/html/allevents/catalague.html
@@ -50,17 +50,17 @@
                     <thead>
                         <tr>
                             <th><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN190814<br></a></th>
-                            <th><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 521</a></th>
+                            <th><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 521</a></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 520</a></td>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 425</a></td>
+                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 520</a></td>
+                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 425</a></td>
                         </tr>
                         <tr>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 412</a></td>
-                            <td><a class="btn btn-primary" role="button" href="https://walterm128.github.io/nasaappweb/eventapi/html/allevents/EINSTE814.html">EINSTEIN 414</a></td>
+                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 412</a></td>
+                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 414</a></td>
                         </tr>
                     </tbody>
                 </table>
