--- a/eventapi/html/allevents/catalogue/einstein190814.html
+++ b/eventapi/html/allevents/catalogue/einstein190814.html
@@ -28,6 +28,7 @@
                 class="collapse navbar-collapse" id="navbarNav" style="font-family: Sriracha, cursive;">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../catalague.html">Catalague</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="../project.html">Project</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org" target="_blank">LSC</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu" target="_blank">LIGO</a></li>
