--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -67,8 +67,10 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th class="text-left">Search information</th>
-                                <th class="text-left"><input type="search" style="width: 750px;"></th>
+                                <th class="text-left">
+                                    <form class="text-center" action="javascript:search();">
+                                        <p>Search Information</p><input class="form-control" type="search"><button class="btn btn-primary" id="go" type="submit" style="margin-left: 15px;" onclick="document.getElementById(&#39;searchForm&#39;).submit(); return false;">Search</button></form>
+                                </th>
                             </tr>
                         </thead>
                         <tbody>
