--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -69,7 +69,8 @@
                             <tr>
                                 <th class="text-left">
                                     <form class="text-center" action="javascript:search();">
-                                        <p>Search Information</p><input class="form-control" type="search"><button class="btn btn-primary" id="go" type="submit" style="margin-left: 15px;" onclick="document.getElementById(&#39;searchForm&#39;).submit(); return false;">Search</button></form>
+                                        <p>Search Information</p><input class="form-control" type="search" data-toggle="tooltip" data-bs-tooltip="" title="Search Demo Only">
+                                        <p></p><button class="btn btn-primary" data-toggle="tooltip" data-bs-tooltip="" id="go" type="submit" style="margin-left: 15px;" onclick="document.getElementById(&#39;searchForm&#39;).submit(); return false;" title="Search Demo Only">Search</button></form>
                                 </th>
                             </tr>
                         </thead>
