--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white rubberBand animated portfolio-navbar gradient">
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
         <div class="container"><img src="assets/img/PngItem_2522307.png" style="width: 25px;margin: 0px;margin-right: 10px;"><a class="navbar-brand logo" href="#" style="font-family: 'Bigshot One', cursive;"><strong>GW EINSTEIN</strong></a><button data-toggle="collapse" class="navbar-toggler"
                 data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav" style="font-family: Sriracha, cursive;">
