--- a/eventapi/html/allevents/contact.html
+++ b/eventapi/html/allevents/contact.html
@@ -7,6 +7,10 @@
     <title>Contact</title>
     <meta name="description" content="GW EINSTEIN">
     <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
+    <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
+    <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
+    <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
+    <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface">
