--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
     </nav>
-    <main class="page lanidng-page">
+    <main class="page lanidng-page" style="padding-top: 0px;">
         <section class="portfolio-block block-intro">
             <div class="container"><img class="img-fluid shadow bounce animated" src="assets/img/PngItem_2522307.png" style="width: 145px;">
                 <div class="about-me">
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </section>
-        <section class="portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;">
+        <section class="portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;padding-bottom: 0px;">
             <div class="container">
                 <div class="table-responsive" style="width: 750;">
                     <table class="table">
@@ -116,7 +116,7 @@
                 </div>
             </section>
         </section>
-        <section class="portfolio-block skills">
+        <section class="portfolio-block skills" style="padding: 0;padding-top: 0;margin-bottom: 20px;">
             <div class="container">
                 <div class="heading"></div>
                 <h3 class="text-center" data-aos="zoom-out" style="font-family: Sriracha, cursive;"><strong>LINKS EXTERNAL INFORMATION</strong><br></h3>
