--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -71,7 +71,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/unnamed.jpg" style="width: 220px;"></div>
                             <div class="card-body" style="font-size: 22px;">
-                                <p class="card-text" data-bs-hover-animate="bounce"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy" target="_blank">LGRAVITY SPY</a><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy" target="_blank"><strong>GRAVITY SPY</strong></a><br></p>
                             </div>
                         </div>
                     </div>
