--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -121,7 +121,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/1366_2000.jpg" style="width: 304px;"></div>
                             <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce"></p><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 22px;" target="_blank"><strong>SUPERNOVA</strong></a></div>
+                                <p class="text-center card-text" data-bs-hover-animate="bounce"></p><a class="card-link" data-bs-hover-animate="pulse" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 22px;" target="_blank"><strong>SUPERNOVA</strong></a></div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
